# mtEngine

./: .clangd  .gitignore  CMakeLists.txt  README.md  VULKAN_README.md  tasks.py
engine/src/: CMakeLists.txt  defines.h
engine/src/common/: singleton.h
engine/src/core/: application.cpp  application.h  eventsystem.cpp  eventsystem.h  jobsystem.cpp  jobsystem.h  loggersystem.cpp  loggersystem.h  memorysystem.cpp  memorysystem.h  platform.h  std_wrapper.h  test.cpp
engine/src/render/: ibackend.h  rendersystem.cpp  rendersystem.h
engine/src/render/vulkan/: vulkan_backend.cpp  vulkan_backend.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_context.cpp  vulkan_context.h  vulkan_device.cpp  vulkan_device.h  vulkan_image.cpp  vulkan_image.h  vulkan_swapchain.cpp  vulkan_swapchain.h
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  jobsystem.cpp  jobsystem.h  singleton.h  test.h
testbed/: CMakeLists.txt  main.cpp
